[tool.poetry]
name = "llamaindex-parser-visualizer"
version = "0.1.0"
description = "Streamlit app to visualize the document node parsers from LLamaIndex"
authors = ["Sam Longenbach <samuel.longenbach@storebrand.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
requests = "^2.32.3"
pandas = "^2.2.2"
llama-index = "^0.10.53"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
